# proton

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml
example/counter/counter/frontend/: index.html  package-lock.json
example/counter/counter/frontend/proton/main/: App.js
example/markdowneditor/markdowneditor/: app.py
example/markdowneditor/markdowneditor/frontend/: index.html  package-lock.json  package.json
example/markdowneditor/markdowneditor/frontend/proton/main/: App.js  pyapi.js
example/markdowneditor/markdowneditor/frontend/src/: App.svelte  Sidebar.svelte  app.css  main.js
proton/: constants.py  main.py  watcher.py
proton/runner/: install.py  run.py
proton/schema/: app_config.py  dev_config.py  fe_type.py  init_config.py  method.py
proton/templates/$svelte/$svelte/frontend/src/: main.js
proton/templates/$vanilla/: proton.json
proton/templates/svelte/: app.tmpl.py
proton/templates/svelte/frontend/: index.tmpl.html
proton/templates/svelte/frontend/src/: styles.css
proton/templates/svelte/svelte/frontend/src/: App.svelte
proton/templates/vanilla/vanilla/frontend/src/: main.js
proton/utils/: code_generator.py  config.py  strings.py  templates.py  webview.py
test/utils/: sample_module.py  test_code_generator.py
