[tool.poetry]
name = "proton"
version = "0.1.0"
description = ""
authors = ["sumeet <sumeet.mathpati@gmail.com>"]
readme = "README.md"


[project]
name = "proton"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "~3.12"
authors =  [
    {name = "Sumeet Mathpati", email = "sumeet.mathpati@gmail.com"},
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/the-sumeet/proton"
Issues = "https://github.com/the-sumeet/proton/issues"

[tool.poetry.scripts]
proton = "proton.main:app"

[tool.poetry.dependencies]
python = "~3.12"
typer = "^0.13.1"
pydantic = "^2.10.3"

[tool.poetry.group.dev.dependencies]
watchdog = "^6.0.0"
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
pytest = "^8.3.4"
setuptools = "^75.6.0"
pex = "^2.24.3"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
